Basic setup of framework

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <meta name="author" content="">
   <base href="/">
 
-  <title>Clean Blog - Start Bootstrap Theme</title>
+  <title>SubtleInvesting.com</title>
 
   <!-- Bootstrap core CSS -->
   <link href="assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
