--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,6 @@
   <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="assets/js/clean-blog.min.js"></script>
+<!--  <script src="assets/js/clean-blog.min.js"></script>-->
 </body>
 </html>
